# axum-quasar-template

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile.toml  README.md  docker-compose.yml  dummy_data.json  fly.toml  make.toml  requests.http  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: build-frontend.yml  deploy.yml  run-tests.yml
frontend/: package.json
frontend/src/boot/: axios.ts
frontend/src/components/: models.ts
frontend/src/pages/: ErrorNotFound.vue  IndexPage.vue
migrations/: 0_setup_movies.sql  20221216075041_movies.sql  20221220084516_genre.sql  20221222072725_movies.sql
quasar-project/: README.md  package.json  quasar.config.js
quasar-project/src/components/: models.ts
quasar-project/src/layouts/: MainLayout.vue
quasar-project/src/pages/: IndexPage.vue
queries/: get_all_movies.sql  get_movie.sql
src/: db.rs  main.rs  model.rs
