[package]
name = "axum-quasar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.60"
axum = "0.6.1"
axum-extra = { version = "0.4.2", features = ["spa"] }
dotenvy = "0.15.6"
hyper = "0.14.23"
serde = { version = "1.0.151", features = ["derive"] }
serde_derive = "1.0.150"
serde_json = "1.0.89"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["trace", "cors", "fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
tower = "0.4.13"
